Add initial cv details

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="25">
     <tr>
-      <td><img src="fakehuman.png" alt="My profile Picture"></td>
+      <td><img src="C:\Users\RONIT\Documents\Web Development\HTML - Personal Site\Images\fakehuman.png" alt="My profile Picture"></td>
       <td><h1>Rajat Pandey</h1>
       <p><em>A university student studying in <strong>Swarrnim Startup and Innovation University.</strong></em></p>
       <p>I'm a binge watcher and love to watch web-series of different genres which piques my interest.<br />
